--- a/backend/package.json
+++ b/backend/package.json
@@ -8,17 +8,22 @@
     "dev": "nodemon server.js",
     "seed": "node seed/seedData.js"
   },
-  "keywords": ["elearning", "mern", "api"],
+  "keywords": [
+    "elearning",
+    "mern",
+    "api"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "dotenv": "^16.3.1",
     "cors": "^2.8.5",
-    "express-validator": "^7.0.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.0",
+    "openai": "^6.15.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
