--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.5.11",
+    "@tailwindcss/typography": "^0.5.19",
+    "axios": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.16.0",
-    "axios": "^1.5.0"
+    "tailwindcss": "^3.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.22",
