--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,10 @@ jobs:
           key: ${{ secrets.EC2_KEY }}
           ssh_options: "-o StrictHostKeyChecking=no"
           script: |
-            cd LMSapp
-            git pull origin main
-            docker-compose down
-            docker-compose up --build -d
+            script: |
+  cd LMSapp
+  git pull
+  docker-compose down
+  docker-compose build --no-cache frontend
+  docker-compose up -d
+
