--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
             git fetch origin
             git reset --hard origin/main
 
-            docker-compose down
-            docker-compose build --no-cache frontend
-            docker-compose up -d
+            sudo docker-compose down
+            sudo docker-compose build --no-cache frontend
+            sudo docker-compose up -d
 
