--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
             git fetch origin
             git reset --hard origin/main
 
-            sudo docker-compose -f /home/ubuntu/LMSapp/docker-compose.yml down
-            sudo docker-compose -f /home/ubuntu/LMSapp/docker-compose.yml build --no-cache frontend
-            sudo docker-compose -f /home/ubuntu/LMSapp/docker-compose.yml up -d
+            sudo docker compose down
+            sudo docker compose build --no-cache frontend
+            sudo docker compose up -d
 
